# detection

./: CMakeLists.txt  package.xml
config/: camera.yaml
launch/: 1_stereo.launch.py  camera.launch.py  camera_mount_static_tf.launch.py  oakd_yolo_launch.xml  point_cloud_xyz.launch.py
src/: Dockerfile  human_detection_pcd.cpp  human_detection_pcd.hpp  human_detection_pcd.py  multidetect.ipynb  oakd_yolo.py
